# libinput-basics

./: CMakeLists.txt  main.c
cmake/: FindLibudev.cmake
